tdf#115153 writerfilter: RTF import: fix vert orient of Word 6 shapes

The bugdoc is affected by the change of default vertical alignment;
apparently it's not even possible to set the vertical alignment of a
Word 6 drawing object (\do) so we have to set the Word default.

(regression from c79467ba954987f1d239c594c1e1b3af3f5515f6)

Change-Id: I4084a7a7e2a55f864cb569e04632e034d59eefdb